@@ -6,6 +6,8 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.62.00
 
+              rasttopnm: add -dumpheader, dumpcolormap.
+
               pamstereogram: change -guidesize default from 10 to 20
               (relevant since 10.61).
 
